Back to  PR  validation

--- a/.github/workflows/PRCheck.yml
+++ b/.github/workflows/PRCheck.yml
@@ -1,10 +1,6 @@
 name: Build Xamarin.Forms.EmbeddedAssets
 
-on:
-  push:
-    branches:
-      - main
-      - develop
+on: [pull_request]
     
 jobs:
   build:
