--- a/.github/workflows/Package.CI.yml
+++ b/.github/workflows/Package.CI.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Push Nupkg to GitHub Packages
       uses: tanaka-takayoshi/nuget-publish-to-github-packages-action@v2.1
-      if: github.ref == 'refs/heads/develop'
+      #if: github.ref == 'refs/heads/develop'
       with:
         nupkg-path:  './artifacts/*.nupkg'
         repo-owner:  'felipebaltazar'
